# ccdutils

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  MANIFEST.in  Makefile  README.md  api.html  ccd_find_fragments.py  ccd_mogul_cli.py  ccd_utils_cli.py  chem_comp_xml.py  com  fragment_library.py  genindex.html  index.html  mmCif  objects.inv  pdb_ccd_mogul.py  pdb_chemical_components.py  pdb_chemical_components_rdkit.py  pdbeccdutils.computations.html  pdbeccdutils.core.html  pdbeccdutils.helpers.html  pdbeccdutils.scripts.html  pdbeccdutils.utils.html  process_components_cif_cli.py  py-modindex.html  pyproject.toml  sameer_prototype_chem.py  search.html  searchindex.js  setup.py  split_components_cif.py  temp_jiffy_number_rotatable_bonds_jiffy.py  temp_sample_chem_comp.xml  (+9 more)
.doctrees/: api.doctree  environment.pickle  index.doctree  pdbeccdutils.computations.doctree  pdbeccdutils.core.doctree  pdbeccdutils.helpers.doctree  pdbeccdutils.scripts.doctree  pdbeccdutils.utils.doctree
_sources/: api.md.txt  index.md.txt  pdbeccdutils.computations.md.txt  pdbeccdutils.core.md.txt  pdbeccdutils.utils.md.txt
_static/: documentation_options.js
computations/: parity_method.py
core/: bm_reader.py  ccd_reader.py  ccd_writer.py  component.py  exceptions.py  models.py
data/: fragment_library.smi  smi.text
doc/: Makefile  api.md  api.rst  conf.py  index.md  index.rst  pdbeccdutils.computations.md  pdbeccdutils.core.md  pdbeccdutils.core.rst  pdbeccdutils.helpers.md  pdbeccdutils.helpers.rst  pdbeccdutils.scripts.md  pdbeccdutils.scripts.rst  pdbeccdutils.utils.md  pdbeccdutils.utils.rst
guide/: depictions.html  fragments.html  intro.html  pipelines.html  scaffolds.html  similarity.html
helpers/: cif_tools.py  helper.py  mol_tools.py
ipynb/: image+demonstration+pdb_chemical_components_rdkit+.ipynb
pdbe_ccd_utils/: fragment_library.py  pdb_chemical_components.py  process_components_cif_cli.py
pdbeccdutils/: __init__.py  ccd_mogul_cli.py  ccd_utils_cli.py  chem_comp_xml.py  fragment_library.py  pdb_ccd_mogul.py  pdb_chemical_components.py  pdb_chemical_components_rdkit.py  process_components_cif_cli.py  ring2dtemplates.py  split_components_cif.py  utilities.py
scripts/: process_components_cif_cli.py
tests/: pytest.ini  test_bound_molecule.py  test_chem_comp_xml.py  test_fragment_library.py  test_inchi_key_matches.py  test_load_eoh_cif.py  test_parity.py  test_pdb_ccd_mogul.py  test_pdb_ccd_rdkit_loading.py  test_pdb_chemical_components.py  test_process_components_cif_cli.py  test_property_generation.py  test_rdkit_fixtures.py  test_scaffold_generation.py  test_split_components_cif.py  test_web_services.py  test_write_ccd_cif.py  test_write_cml.py  test_write_img.py  test_write_pdb.py  test_write_sdf.py  (+2 more)
(+184 files in other folders)
