[tool.poetry]
name = "pdbeccdutils"
version = "0.8.5"
description = "Toolkit to deal with wwPDB chemical components definitions for small molecules."
authors = ["Protein Data Bank in Europe <pdbehelp@ebi.ac.uk>"]
license = "Apache License 2.0."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"
scipy = "^1.14.1"
numpy = "~1.26.4"
requests = "^2.32.3"
gemmi = "^0.6.6"
networkx = "^3.3"
rdkit = "2023.09.6"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.3.0"
sphinx-markdown-tables = "^0.0.17"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
